package Forms;

import javax.swing.*;

public class Menu extends JPanel{

    private JPanel menuForm;

    private JButton prestarLibroButton;
    private JButton agregarLibroButton;
    private JButton devolverLibroButton;
    private JButton cerrarSesionButton;
    private JButton buscarLibroButton;
}
