package Forms;

import javax.swing.*;

public class agregarLibro extends JPanel{
    private JTextField isbnAgregarField;
    private JTextField tituloAgregarField;
    private JTextField autorAgregarField;
    private JTextField categoriaAgregarField;
    private JTextField stockAgregarField;
    private JTextField paginasAgregarField;
    private JButton agregarLibroButton;
    private JPanel agregarLibroForm;
}
