package Forms;

import javax.swing.*;

public class devolverLibro extends JPanel {
    private JTextField isbnDevolverField;
    private JPanel devolverLibroForm;
    private JButton devolverLibroField;

}
